--- a/src/analytsis.ipynb
+++ b/src/analytsis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test(c_name):\n",
     "    global response, data\n",
-    "    api_url = f'http://localhost:5000/price_range/{c_name}'\n",
+    "    api_url = f'http://localhost:80/price_range/{c_name}'\n",
     "    response = requests.get(api_url)\n",
     "    response.raise_for_status()\n",
     "    data = response.json()\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -38,13 +38,13 @@
     }
    ],
    "source": [
-    "print(test('ITC'))"
+    "print(data)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
